--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ psycopg2-binary==2.8.6
 whitenoise==5.2.0
 django-cors-headers
 django-livereload-server
-flair
-google_trans_new
+# flair
+# google_trans_new
